# voboost-install

./: .gitignore  AGENTS.md  LICENSE  PROGRESS.md  README.md  README.ru.md  package-lock.json  package.json
config/: .env.example  config-commands.json  config-eula-en.md  config-eula-ru.md  config-install.json  config-provision.README.md  config-provision.json  config-restore.json  config-testplane.ts  config-uninstall.json  eslint.config.mjs  prettier.config.mjs  release-public.pem  tsconfig.json  vite.config.ts
content/: 1-welcome-en.md  1-welcome-ru.md  2-eula-license-en.md  2-eula-license-ru.md  2-eula-title-en.md  2-eula-title-ru.md  3-download-en.md  3-download-ru.md  4-connection-en.md  4-connection-ru.md  4-connection-step1-mac-new-en.md  4-connection-step1-mac-new-ru.md  4-connection-step1-mac-old-en.md  4-connection-step1-mac-old-ru.md  4-connection-step1-win-new-en.md  4-connection-step1-win-new-ru.md  4-connection-step2-en.md  4-connection-step2-ru.md  4-connection-step3-en.md  4-connection-step3-ru.md  5-install-en.md  5-install-ru.md  6-complete-en.md  6-complete-ru.md
docs/: 00-documentation-review-claude-opus-4.5.md  00-documentation-review-gemini-2.5-pro.md  01-architecture.md  02-screens.md  03-adb-integration.md  04-releases-schema.md  05-themes.md  06-i18n.md  07-build.md  08-timeline.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/resources/adb/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adb.rs  cli_runner.rs  download.rs  install.rs  mod.rs  platform.rs
src-tauri/src/utils/: logger.rs  platform.rs
(+133 files in other folders)
